tests/baselines/reference/missingReturnStatement.errors.txt
tests/cases/compiler/missingReturnStatement.ts(3,22): error TS2847: A function with this return type needs to explicitly return a value.


==== tests/cases/compiler/missingReturnStatement.ts (1 errors) ====
    module Test {
        export class Bug {
            public foo():string {
                         ~~~~~~
!!! error TS2847: A function with this return type needs to explicitly return a value.
            }
        }    
    }
    